<resources>
    <string name="app_name">Pizzapp</string>
    <string name="tab_title_main">My Pizza</string>
    <string name="tab_title_crust">Crust</string>
    <string name="tab_title_size">Size</string>
    <string name="tab_caption_main">Hello!</string>
    <string name="tab_caption_crust">Choose Crust</string>
    <string name="tab_caption_size">Choose Size</string>
    <string name="image_description_dough_thick">Thick</string>
    <string name="image_description_dough_regular">Regular</string>
    <string name="image_description_dough_thin">Thin</string>
    <string name="currency_symbol">$</string>
    <string name="initial_medium_pizza_price">15.00$</string>
    <string name="initial_large_pizza_price">17.50$</string>
    <string name="initial_extra_large_pizza_price">20.00$</string>
    <string name="image_description_medium_pizza">button with medium pizza image</string>
    <string name="image_description_large_pizza">button with large pizza image</string>
    <string name="image_description_extra_large_pizza">button with extra large pizza image</string>
    <string name="m">M</string>
    <string name="medium_size">9.5</string>
    <string name="large_size">11.5</string>
    <string name="l">L</string>
    <string name="xl">XL</string>
    <string name="extra_large_size">13.5</string>
    <string name="message_for_size_choosing">You just choose pizza in size of</string>
    <string name="delivery_button">Delivery</string>
    <string name="pickup_button">Pickup</string>
    <string name="olives">olives</string>
    <string name="topright">topRight</string>
    <string name="bottomright">bottomRight</string>
    <string name="bottomleft">bottomLeft</string>
    <string name="topleft">topLeft</string>
    <string name="hello">Hello!</string>
    <string name="choose_topping">Choose Topping</string>
    <string name="size_symbol">\"</string>
    <string name="tab_title_separator">/</string>
    <string name="pipe_separator">|</string>
    <string name="error_message">Error, please try again</string>
    <string name="price_showing_prefix">Total:&#160;</string>
    <string name="price_showing_suffix">0$</string>
    <string name="button_clear_text">CLEAR PIZZA</string>
    <string name="button_continue_text">CONTINUE</string>
    <string name="textViewChosenCrustIndicatorText">CRUST</string>
    <string name="textViewChosenSizeIndicatorText">SIZE</string>
    <string name="done">DONE</string>
    <string name="popup_logo_title">Choose Topping</string>
    <string name="test_body_of_text">CLASSES and interfaces lie at the heart of the Java programming language.
They are its basic units of abstraction. The language provides many powerful
elements that you can use to design classes and interfaces. This chapter contains
guidelines to help you make the best use of these elements so that your classes and
interfaces are usable, robust, and flexible.
Item 15: Minimize the accessibility of classes and members
The single most important factor that distinguishes a well-designed component
from a poorly designed one is the degree to which the component hides its internal
data and other implementation details from other components. A well-designed
component hides all its implementation details, cleanly separating its API from its
implementation. Components then communicate only through their APIs and are
oblivious to each others’ inner workings. This concept, known as information
hiding or encapsulation, is a fundamental tenet of software design [Parnas72].
Information hiding is important for many reasons, most of which stem from
the fact that it decouples the components that comprise a system, allowing them to
be developed, tested, optimized, used, understood, and modified in isolation. This
speeds up system development because components can be developed in parallel.
It eases the burden of maintenance because components can be understood more
quickly and debugged or replaced with little fear of harming other components.
While information hiding does not, in and of itself, cause good performance, it
enables effective performance tuning: once a system is complete and profiling has
determined which components are causing performance problems (Item 67), those
components can be optimized without affecting the correctness of others. Information hiding increases software reuse because components that aren’t tightly coupled often prove useful in other contexts besides the ones for which they wer</string>
    <string name="add_more_button">Add More</string>
    <string name="order_on_its_way_text">Your order is\n on it\'s way!</string>
</resources>