<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F7F7F7"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context="com.pizzapp.OrderSummary">


    <include
        android:id="@+id/layoutLogo"
        layout="@layout/layout_logo" />

    <ScrollView
        android:id="@+id/order_details_scroll_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorGrayTabBackground"
            android:gravity="center"
            android:orientation="vertical"
            android:shrinkColumns="*">

            <TableRow
                android:id="@+id/sizeMRow"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="true"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/medium_pizza_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/image_description_medium_pizza"
                        app:srcCompat="@drawable/ic_m_pizza" />

                    <TextView
                        android:id="@+id/medium_pizza_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginLeft="20dp"
                        android:text="@string/initial_medium_pizza_price"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:fontFamily="@font/open_sans" />

                </LinearLayout>


            </TableRow>
        </TableLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/add_more"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/buttonClearHeight"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/ic_clear_button"
            android:text="@string/add_more_button"
            android:textColor="@color/buttonClearTextColor" />
        <TextView
            android:id="@+id/order_total_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            app:fontFamily="@font/open_sans" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/action_buttons_layout"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="#FFFFFF"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:padding="20dp">

        <Button
            android:id="@+id/delivery_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/ic_vectorcontinue"
            android:text="@string/delivery_button"
            android:textSize="20sp"
            android:textStyle="bold" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/black" />

        <Button
            android:id="@+id/pickup_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/ic_vectorcontinue"
            android:text="@string/pickup_button"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>