<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/topRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="207dp"
            android:layout_marginTop="250dp"
            android:contentDescription="@string/topright"
            app:srcCompat="@drawable/ic_xl_pizza_slice"
            />

        <ImageView
            android:id="@+id/bottomRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="207dp"
            android:layout_marginTop="325dp"
            android:contentDescription="@string/bottomright"
            android:rotation="90"
            app:srcCompat="@drawable/ic_xl_pizza_slice"
            />

        <ImageView
            android:id="@+id/bottomLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="325dp"
            android:contentDescription="@string/bottomleft"
            android:rotation="180"
            app:srcCompat="@drawable/ic_xl_pizza_slice"
            />

        <ImageView
            android:id="@+id/topLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="250dp"
            android:contentDescription="topLeft"
            android:rotation="270"
            app:srcCompat="@drawable/ic_xl_pizza_slice"
            />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="201dp"
        android:fadingEdge="horizontal"
        android:scrollbars="horizontal">

        <GridLayout
            android:id="@+id/grid_layout"
            android:layout_width="match_parent"
            android:layout_height="151dp"
            android:layout_marginBottom="10dp"
            android:columnCount="4"
            android:paddingLeft="40dp"
            android:paddingRight="18dp"
            android:rowCount="3">


            <CheckBox
                android:id="@+id/olives"
                android:layout_width="120dp"
                android:layout_height="52dp"
                android:layout_row="0"
                android:layout_column="0"
                android:onClick="add_topping"
                android:paddingRight="15dp"
                android:text="@string/olives" />

            <CheckBox

                android:id="@+id/tuna"
                android:layout_width="120dp"
                android:layout_height="52dp"
                android:layout_row="0"
                android:layout_column="1"
                android:onClick="add_topping"
                android:paddingRight="15dp"
                android:text="@string/olives" />

            <CheckBox

                android:id="@+id/corn"
                android:layout_width="120dp"
                android:layout_height="52dp"
                android:layout_row="0"
                android:layout_column="2"
                android:onClick="add_topping"
                android:paddingRight="15dp"
                android:text="@string/olives" />

            <CheckBox

                android:id="@+id/pineapple"
                android:layout_width="120dp"
                android:layout_height="52dp"
                android:layout_row="0"
                android:layout_column="3"
                android:onClick="add_topping"
                android:text="@string/olives" />


        </GridLayout>

    </ScrollView>


</RelativeLayout>