<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <RelativeLayout
        android:id="@+id/pizzaPic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="70dp">


        <FrameLayout
            android:id="@+id/topRightFrame"
            android:layout_width="154dp"
            android:layout_height="154dp"
            android:layout_marginLeft="207dp"
            android:layout_marginTop="25dp">

            <ImageView
                android:id="@+id/topRight"
                android:layout_width="76dp"
                android:layout_height="76dp"
                android:layout_gravity="left|bottom"
                android:contentDescription="@string/topright"
                android:onClick="onClick"
                android:paddingLeft="1.5dp"
                android:paddingBottom="1.5dp"
                app:srcCompat="@drawable/ic_xl_pizza_slice" />

            <ImageView
                android:id="@+id/pizzaPLusTopRight"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="left|center|bottom"
                android:layout_marginLeft="15dp"
                android:layout_marginBottom="20dp"
                app:srcCompat="@drawable/pizza_plus" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/bottomRightFrame"
            android:layout_width="88dp"
            android:layout_height="88dp"
            android:layout_marginLeft="207dp"
            android:layout_marginTop="178dp">

            <ImageView
                android:id="@+id/bottomRight"
                android:layout_width="76dp"
                android:layout_height="76dp"
                android:layout_gravity="top|left"
                android:contentDescription="@string/bottomright"
                android:onClick="onClick"
                android:paddingLeft="1.5dp"
                android:paddingTop="1.5dp"
                android:rotation="90"
                app:srcCompat="@drawable/ic_xl_pizza_slice" />

            <ImageView
                android:id="@+id/pizzaPLusBottomRight"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="left|center|top"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/pizza_plus" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/bottomLeftFrame"
            android:layout_width="154dp"
            android:layout_height="88dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="178dp">


            <ImageView
                android:id="@+id/bottomLeft"
                android:layout_width="76dp"
                android:layout_height="76dp"
                android:layout_gravity="top|right"
                android:contentDescription="@string/bottomleft"
                android:onClick="onClick"
                android:paddingTop="1.5dp"
                android:paddingRight="1.5dp"
                android:rotation="180"
                app:srcCompat="@drawable/ic_xl_pizza_slice" />

            <ImageView
                android:id="@+id/pizzaPLusBottomleft"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="right|center|top"
                android:layout_marginTop="20dp"
                android:layout_marginRight="15dp"
                app:srcCompat="@drawable/pizza_plus" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/topLeftFrame"
            android:layout_width="154dp"
            android:layout_height="154dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="25dp">

            <ImageView
                android:id="@+id/topLeft"
                android:layout_width="76dp"
                android:layout_height="76dp"
                android:layout_gravity="bottom|right"
                android:contentDescription="topLeft"
                android:onClick="onClick"
                android:paddingRight="1.5dp"
                android:paddingBottom="1.5dp"
                android:rotation="270"
                app:srcCompat="@drawable/ic_xl_pizza_slice" />

            <ImageView
                android:id="@+id/pizzaPLusTopleft"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="right|center|bottom"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="20dp"
                app:srcCompat="@drawable/pizza_plus" />
        </FrameLayout>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/pizzaPic">

        <LinearLayout
            android:id="@+id/topOfBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/add"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="110dp"
                android:onClick="addPizza"
                android:text="ADD" />

            <Button
                android:id="@+id/clear"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:text="Clear" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_below="@+id/topOfBottom">

            <TextView
                android:id="@+id/orderPrice"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="180dp"
                android:text="TextView" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/orderDisplay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/price"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="160dp"
                android:text="View Order" />

        </LinearLayout>

        <Button
            android:id="@+id/placeOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/orderDisplay"
            android:text="Continue" />


    </RelativeLayout>


</RelativeLayout>